BAckground Stretch corrected

--- a/assets/css/form1style.css
+++ b/assets/css/form1style.css
@@ -12,6 +12,9 @@
     justify-content: center;
     height: 100vh;
 }
+body{
+    background-size: cover;
+}
 
 form{
     margin-top: 10px;
